--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="#intro">Inicio</a></li>
-                    <li><a href="#about">Mi Información</a></li>
+                    <li><a href="#about">Mi Informacion</a></li>
                     <li><a href="#services">Mis Estudios</a></li>
                     <li><a href="#portfolio">Galeria</a></li>
                     <li><a href="#team">Anime</a></li>
                     <li class="menu-has-children"><a href="">Laboratorios de Clase</a>
                         <ul>
                             <li><a href="/page/laboratorio_clase_01.html">Laboratorio - Carta</a></li>
-                            <li><a href="/page/practica_calificada_01.html">Práctica Calificada 01</a></li>
+                            <li><a href="/page/practica_calificada_01.html">Practica Calificada 01</a></li>
                             <li><a href="/page/diversidad_animal_cajamarca.html">Diversidad Animal de Cajamarca</a></li>
-                            <li><a href="/page/practica_calificada_02.html">Práctica Calificada 02</a></li>
+                            <li><a href="/page/practica_calificada_02.html">Practica Calificada 02</a></li>
                         </ul>
                     </li>
                     <li><a href="#contact">Contactarme</a></li>
@@ -90,7 +90,7 @@
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <h3>Descripcion del Sitio Web</h3>
-                                <p>Este es mi sito web en la cual se mostrara información correspondiente a mi persona; además, de que incluira los laboratorios y prácticas desarrolladas.</p>
+                                <p>Este es mi sito web en la cual se mostrara informacion correspondiente a mi persona; ademas, de que incluira los laboratorios y practicas desarrolladas en el  curso de Ingenieria Web.</p>
                                 <a href="#featured-services" class="btn-get-started scrollto">BASALUAN</a>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                         <div class="carousel-background"><img src="/src/img/galeria/carrusel/c3.jpg" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h3>Información con Respecto a la Creación del Sitio Web</h3>
+                                <h3>Informacion con Respecto a la Creacion del Sitio Web</h3>
                                 <p>El sitio web se desarrollo en el curso de Ingenieria Web de la carrera de Ingenieria de Sistemas en la Universidad Nacional de Cajamarca, y ha ido actualizandoce a lo largo del tiempo.</p>
                                 <a href="#featured-services" class="btn-get-started scrollto">BASALUAN</a>
                             </div>
@@ -133,20 +133,20 @@
 
                     <div class="col-lg-4 box">
                         <i class="ion-ios-bookmarks-outline"></i>
-                        <h4 class="title"><a href="">Descripción</a></h4>
+                        <h4 class="title"><a href="">Descripcion</a></h4>
                         <p class="description">Bachiller en Ingenieria de Sistemas de la Universidad Nacional de Cajamarca. Mi gran objetivo es ser un profesional competente; además, especializarme en DevOps, análisis de datos, desarrollo de software, base de datos, seguridad de la información, gestión de procesos, aplicaciones web, marketing digital, virtualización, investigación, networking, planificación de recursos empresariales, front-end developer y más.</p>
                     </div>
 
                     <div class="col-lg-4 box box-bg">
                         <i class="ion-ios-stopwatch-outline"></i>
-                        <h4 class="title"><a href="">Pasa-tiempos</a></h4>
-                        <p class="description">En mis ratos libres práctico algun deporte como el fútbol, también me gusta mucho dibujar y jugar videojuegos, en especial PES (Pro Evolution Soccer); además, de que me encanta leer manga y ver series de anime japonés.</p>
+                        <h4 class="title"><a href="">Pasatiempos</a></h4>
+                        <p class="description">En mis ratos libres practico algun deporte como el futbol, tambien me gusta mucho dibujar y jugar videojuegos, en especial PES (Pro Evolution Soccer); ademas, que me encanta leer manga y ver series de anime japones.</p>
                     </div>
 
                     <div class="col-lg-4 box">
                         <i class="ion-ios-heart-outline"></i>
                         <h4 class="title"><a href="">Gustos</a></h4>
-                        <p class="description">Siento gran admiración por la cultura japonesa, me gusta la forma en que ellos tienen una visón diferente de la vida y el planeta; es por eso que en un fututo tengo como objetivo viajar a este pas para asi conocer y vivir sus tradiciones, filosofía, lugares turísticos, etc. de manera personal.</p>
+                        <p class="description">Siento gran admiracion por la cultura japonesa, me gusta la forma en que ellos tienen una vison diferente de la vida y el planeta; es por eso que en un fututo tengo como objetivo viajar a este pas para asi conocer y vivir de forma personal sus tradiciones, filosofia, lugares turisticos, etc.</p>
                     </div>
 
                 </div>
@@ -161,7 +161,7 @@
                 <!-- Section Header -->
 
                 <header class="section-header">
-                    <h3>Mi Información</h3>
+                    <h3>Mi Informacion</h3>
                     <p>El psudonimo que me eh puesto o que me gusta es "Basaluan" dado que representa todas las partes iniciales de mis nombres y apellidos completos.</p>
                 </header>
 
@@ -173,7 +173,7 @@
                                 <img id="info" src="/src/img/galeria/informacion/i1.png" alt="" class="img-fluid">
                                 <div class="icon"><i class="ion-ios-information"></i></div>
                             </div>
-                            <h2 class="title">Nombre Completos </h2>
+                            <h2 class="title">Nombre Completos</h2>
                             <p>
                                 Apellido Paterno: Bardales <br> Apellido Materno: Saucedo <br> Nombres: Luis Angel
                             </p>
@@ -188,7 +188,7 @@
                             </div>
                             <h2 class="title">Algunos Datos </h2>
                             <p>
-                                DNI: 71396592 <br> Código SUNEDU: 2013110005 <br> N° Licencia Conducir: L71396892
+                                DNI: 71396592 <br> Codigo SUNEDU: 2013110005 <br> N° Licencia Conducir: L71396892
                             </p>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                             </div>
                             <h2 class="title">Lugar de Residencia </h2>
                             <p>
-                                País: Peru <br> Departamento: Cajamarca <br> Provincia: Cajamarca <br> Distrito Cajamarca: Cajamarca <br> Dirección: Psje. Santa Victoria 197
+                                País: Peru <br> Departamento: Cajamarca <br> Provincia: Cajamarca <br> Distrito Cajamarca: Cajamarca <br> Direccion: Psje. Santa Victoria 197
                             </p>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
 
                 <header class="section-header wow fadeInUp">
                     <h3>Mis Estudios</h3>
-                    <p>Bachiller en Ingeniería de Sistemas de la Universidad Nacional de Cajamarca.</p>
+                    <p>Bachiller en Ingenieria de Sistemas de la Universidad Nacional de Cajamarca.</p>
                 </header>
 
                 <div class="row">
@@ -296,7 +296,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Familiar</h4>
-                                <p>Jivo, mi tío fallecido, un ángel de la guarda en mi vida</p>
+                                <p>Jivo, mi tio fallecido, un angel de la guarda en mi vida</p>
                             </div>
                         </div>
                     </div>
@@ -352,7 +352,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Individual</h4>
-                                <p>Noche de cine, viendo el anime que más me fascina Dragon Ball</p>
+                                <p>Noche de cine, viendo el anime que mas me fascina Dragon Ball</p>
                             </div>
                         </div>
                     </div>
@@ -395,7 +395,7 @@
 
                             <div class="portfolio-info">
                                 <h4>Familiar</h4>
-                                <p>Rodrigo mi primo querido</p>
+                                <p>Rodrigo, mi primo querido</p>
                             </div>
                         </div>
                     </div>
@@ -436,7 +436,7 @@
 
                 <div class="section-header wow fadeInUp">
                     <h3>Anime</h3>
-                    <p>Uno de mis pasatiempos preferidos es ver series de animes, en donde se puede observar diferentres tramas muy interesantes. Aquí muestro algunos de mis series favoritas.</p>
+                    <p>Uno de mis pasatiempos preferidos es ver series de animes, en donde se puede observar diferentres tramas muy interesantes. Aqui muestro algunos de mis series favoritas.</p>
                 </div>
 
                 <div class="row">
@@ -460,7 +460,7 @@
                             <div class="member-info">
                                 <div class="member-info-content">
                                     <h4>School Days</h4>
-                                    <span>Anime Gore y Romanticismo</span>
+                                    <span>Anime Gore y Romantico</span>
                                     <div class="social">
                                         <a href="http://jkanime.net/school-daysdays/"><i class="ion-social-google"></i></a>
                                     </div>
@@ -555,7 +555,7 @@
 
                     <div class="col-lg-3 col-md-6 footer-info">
                         <h3>BASALUAN</h3>
-                        <p>Bachiller en Ingeniería de Sistemas de la Universidad Nacional de Cajamarca, perteneciente al quinto superior y con experiencia en desarrollo de software e implementación de sistemas PI y sistemas Sense; además, de brindar servicio y soporte técnico de computadoras.  Orientado a resultados a través de la identificación de oportunidades de mejora de procesos y solución de problemas con el uso de tecnologías de información, proactivo, siempre dispuesto a aprender y trabajar en equipo.</p>
+                        <p>Bachiller en Ingenieria de Sistemas de la Universidad Nacional de Cajamarca, perteneciente al quinto superior y con experiencia en desarrollo de software e implementacion de sistemas PI y sistemas Sense; ademas, de brindar servicio y soporte tecnico de computadoras.</p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
